public/styles/site/_component-card.scss
.card-group {
	display: flex;
	flex-wrap: wrap;
}

.card {
	display: flex;
	flex-direction: column;
	width: 100%;
	background-color: #ffffff;
	// box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
	border-radius: 2px;
	padding: 1em;
	margin-bottom: 1.5em;

	&--small {
		@media all and ( min-width: 880px ) {
			width: 25%;
		}
	}

	&--medium {
		@media all and ( min-width: 880px ) {
			width: 45%;
		}
	}

	&--clickable {
		cursor: pointer;
	}
}

.card__title {
	display: flex;
	width: 100%;
	justify-content: center;
	text-align: center;
}

.card__content {
	display: flex;
	flex-direction: column;
	align-items: center;

	@media all and ( min-width: 540px ) {
		display: flex;
		flex-direction: row;
	}
}

.card__content-group {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	overflow: hidden;

	&--border-top {
		border-top: 1px solid #000;
	}
}

.card__overview {
	display: flex;
	width: 100%;
	margin-top: 1em;

	@media all and (min-width: 780px) {
		width: 50%;
	}
}

card__overview-icon {
	width: 1em;
    text-align: center;
}

.card__overview-text {
	margin-left: 1em;
	align-self: center;
}

.card__text {
	font-size: 12px;
	margin-right: 3em;
	margin: 0.5em 1em 0.5em 3em;
	text-align: left;

	@media all and ( min-width: 860px ) {
		font-size: 15px;
		margin: 0.5em 3em 0.5em 2.8em; /* 2.8em causes the text to line up with the other success stories images creating a clean line */
	}
}

.card__icon-container {
	align-self: center;
	position: relative;
	top: -2.2em;
	background-color: #FCCA46;
	padding: .5em;
	border-radius: 50%;
}

.card__icon {
	width: 1.5em;
	height: 1.5em;
}

.card__image {
	align-self: center;
	width: 12em;
	height: 12em;
	border-radius: 50%;

	@media all and ( min-width: 860px ) {
		margin-left: 2.85714286em; /* 40px / 14px (base font-size) */
	}

	&--no-margin {
		margin: 0;
	}

	&--small {
		width: 9em;
		height: 9em;
	}
}
// TODO: This will eventually move into the button component CSS once the registration form is cleaned up
.card__button-group {
	display: flex;
	flex-direction: column;
	margin: 2em 1em 1em 1em;

	@media all and (min-width: 400px) {
		flex-direction: row;
	}

	&--single-button {
		justify-content: center;
	}

	&--multiple-buttons {
		justify-content: space-around;
	}
}
// TODO: This will eventually move into the button component CSS once the registration form is cleaned up
.card__button {
	min-width: 10em;
	background-color: #FDB127;
	border: none;
	border-radius: 2px;
	padding: 0.75em 1.5em;
	// box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),0 2px 10px 0 rgba(0, 0, 0, 0.12);
	transition: background-color, box-shadow .2s ease-out;

	&:nth-child(n + 2) {
		margin-top: 1.5em;

		@media all and (min-width: 400px) {
			margin-top: 0;
		}
	}

	&:hover {
		background-color: #F7BE57;
		// box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),0 4px 15px 0 rgba(0, 0, 0, 0.15);
	}

	&--disabled {
		box-shadow: none;
		transition: none;
		opacity: 0.6;
		background-color: #ffe2ad;

		&:hover {
			box-shadow: none;
			transition: none;
			opacity: 0.6;
			background-color: #ffe2ad;
		}
	}
}

.card__button-label {
    text-align: center;
    margin: 1em 0;
    font-weight: bold;
}

.card__list-container {
    display: flex;
    width: 50%;
    flex-direction: column;
}

.card__list {
    margin: 0;
    padding: 0;
    list-style: none;
}

.card__list-title {
	border-bottom: 1px solid;
    padding-bottom: .5em;
    margin-right: 1em;
}

.card__list-item {
	padding: 0.3em 0 0 1em;
color: #a1a5a2;
}

.card__content-divider {
	width: 100%;
	margin: 2em 0 1em;
	opacity: .5;
}

